--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,6 @@
   position:absolute;
   /* opacity: 0.5; */
   font-size: larger;
-  b
   /* justify-content: space-evenly;  */
 }
 
@@ -56,5 +55,5 @@ h3 {
 }
 
 .container{ 
-
+  display: flex;
 }
